fix release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,9 @@ jobs:
           
       - name: set-time
         id: set_time
-        run: echo "RELEASE_NAME=build ${{ github.run_id }} - $(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+        run: |
+          echo "RELEASE_NAME=ビルド ${{ github.run_id }} - $(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+          echo "TAG_NAME=release-$(date +'%Y%m%d%H%M%S')-${{ github.run_id }}" >> $GITHUB_ENV
 
       - name: install
         run: npm install
@@ -29,9 +31,10 @@ jobs:
       - name: build
         run: npm run build
 
-      - name: upload
+      - name: release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ env.TAG_NAME }}
           name: ${{ env.RELEASE_NAME }}
           body: |
           files: |
