--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: set-time
         id: set_time
         run: |
-          echo "RELEASE_NAME=ビルド ${{ github.run_id }} - $(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+          echo "RELEASE_NAME=build ${{ github.run_id }} - $(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
           echo "TAG_NAME=release-$(date +'%Y%m%d%H%M%S')-${{ github.run_id }}" >> $GITHUB_ENV
 
       - name: install
@@ -31,6 +31,9 @@ jobs:
       - name: build
         run: npm run build
 
+      - name: zip
+        run: zip -r release-artifact.zip ./index.html ./main.js
+
       - name: release
         uses: softprops/action-gh-release@v1
         with:
@@ -38,7 +41,6 @@ jobs:
           name: ${{ env.RELEASE_NAME }}
           body: |
           files: |
-            ./index.html
-            ./main.js
+            ./release-artifact.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
